# dodoClone

dodo-backend/dodo_parser/: cards.js  create_data.py  data.json  data.py  images_data_with_commas.py
dodo-backend/mainService/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  redis_utils.py  requirements.txt
dodo-backend/mainService/modules/mainPage/: routes.py  schemas.py  utils.py
dodo-backend/orderService/: .env.example  main.py  pyproject.toml
dodo-backend/orderService/database/: __init__.py
dodo-backend/orderService/database/models/: order.py
dodo-backend/orderService/kafka_broker/: producer.py
dodo-backend/orderService/modules/orders/: routes.py  schemas.py  utils.py
dodo-backend/orderService/modules/repositories/: __init__.py  sqlalchemy_repositories.py
dodo-backend/restaurantService/: main.py  pyproject.toml
dodo-backend/restaurantService/core/: config.py
dodo-frontend/: index.html  package-lock.json  package.json
dodo-frontend/src/: App.jsx  index.css  main.jsx
dodo-frontend/src/api/: OrdersApi.js  PizzaApi.js
dodo-frontend/src/components/: AppRouter.jsx  Cart.jsx  CartPizzaInfo.jsx  CityView.jsx  FederalCity.jsx  GetRegionModal.jsx  ModalFade.jsx  Navbar.jsx  PizzaCard.jsx  PizzaFullView.jsx  PizzasView.jsx  RadioButtonGroup.jsx  RestaurantOrderInfo.jsx  RestaurantOrdersList.jsx  utils.js
dodo-frontend/src/pages/: MainPage.jsx  Profile.jsx  RestaurantViewPage.jsx
dodo-frontend/src/redux/: cartSlice.js  pizzaModalSlice.js  regionSlice.js  store.js
dodo-frontend/src/routes/: index.js
(+3 files in other folders)
