[project]
name = ""
requires-python = "==3.12.*"
version = "0.0.1"
dependencies = [
    "aiokafka==0.12.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==5.0.1",
    "asyncpg==0.30.0",
    "click==8.1.8",
    "fastapi==0.115.12",
    "fastapi-sse==1.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "packaging==24.2",
    "pydantic==2.10.6",
    "pydantic-settings==2.8.1",
    "pydantic-core==2.27.2",
    "python-dotenv==1.1.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "starlette==0.46.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
    "greenlet>=3.1.1",
    "alembic>=1.15.2",
]

[tool.uv]
package = false
